[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/bird.gd" type="Script" id=1]
[ext_resource path="res://sprite/Hit/frame-1.png" type="Texture" id=2]
[ext_resource path="res://sprite/Hit/frame-2.png" type="Texture" id=3]
[ext_resource path="res://sprite/Flaying/frame-1.png" type="Texture" id=4]
[ext_resource path="res://sprite/Flaying/frame-2.png" type="Texture" id=5]
[ext_resource path="res://sprite/Flaying/frame-3.png" type="Texture" id=6]
[ext_resource path="res://sprite/Flaying/frame-4.png" type="Texture" id=7]
[ext_resource path="res://sprite/Flaying/frame-5.png" type="Texture" id=8]
[ext_resource path="res://sprite/Flaying/frame-6.png" type="Texture" id=9]
[ext_resource path="res://sprite/Flaying/frame-7.png" type="Texture" id=10]
[ext_resource path="res://sprite/Flaying/frame-8.png" type="Texture" id=11]
[ext_resource path="res://audio/sfx_hit.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/sfx_die.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/sfx_swooshing.ogg" type="AudioStream" id=14]
[ext_resource path="res://audio/sound_4.ogg" type="AudioStream" id=15]
[ext_resource path="res://audio/sfx_wing.ogg" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Flying",
"speed": 15.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Flapping",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 25.0

[node name="bird" type="RigidBody2D" index="0"]

position = Vector2( 43.2649, 46.9299 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 5.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="anime" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.05, 0.05 )
frames = SubResource( 1 )
animation = "Flying"
frame = 3
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 1.16228, -4.06794 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Timer_Hit" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="Timer_swooing" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="Hit" type="AudioStreamPlayer2D" parent="." index="5"]

position = Vector2( 460, 212 )
stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="die" type="AudioStreamPlayer2D" parent="." index="6"]

position = Vector2( 460, 212 )
stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="swooing" type="AudioStreamPlayer2D" parent="." index="7"]

position = Vector2( 460, 212 )
stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "low"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="waak" type="AudioStreamPlayer2D" parent="." index="8"]

position = Vector2( 460, 212 )
stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "low"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="wing" type="AudioStreamPlayer2D" parent="." index="9"]

position = Vector2( 460, 212 )
stream = ExtResource( 16 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer_Hit" to="." method="_on_Timer_Hit_timeout"]

[connection signal="timeout" from="Timer_swooing" to="." method="_on_Timer_swooing_timeout"]


